--- a/Book/package.json
+++ b/Book/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.3.4",
+    "file-system": "^2.2.2",
     "firebase": "^9.17.2",
     "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
@@ -17,6 +19,7 @@
     "react-router-dom": "^6.8.2"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
