--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "file-system": "^2.2.2",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.21",
     "ts-node": "^10.9.1"
   },
@@ -13,6 +15,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/multer": "^1.4.7",
     "@types/nodemon": "^1.19.2",
     "prisma": "^4.11.0"
   },
