--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.21",
+    "psql": "^0.0.1",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
